#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([BolService], 3.5, customer-service@asiainfo-linkage.com)
AM_INIT_AUTOMAKE(BolService, 3.5)
AC_CONFIG_SRCDIR([KernelGuard.cpp])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC


# Checks for libraries.
#AC_CHECK_LIB(BolCommon)

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netinet/in.h sys/ioctl.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_SIZE_T

# Checks for library functions.

AC_OUTPUT(Makefile)
